--- a/starter/src/App.css
+++ b/starter/src/App.css
@@ -14,9 +14,11 @@ body,
 /* main page */
 
 .list-books-title {
+  display: flex;
   padding: 10px 0;
   background: #2e7c31;
-  text-align: center;
+  justify-content: center;
+  align-items: center;
 }
 .list-books-title h1 {
   font-weight: 400;
@@ -27,6 +29,21 @@ body,
 .list-books-content {
   padding: 0 0 80px;
   flex: 1;
+}
+
+.list-books-logout {
+  position: absolute;
+  right: 0;
+  top: 30px;
+  width: 50px;
+  height: 53px;
+  background: #2e7c31;
+  background-image: url("./icons/logout.svg");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: 28px;
+  font-size: 0;
+  transform: translateY(-50%);
 }
 
 .bookshelf {
